# STM_ESP_gateway

./: .gitignore
ESP_Gateway/: CMakeLists.txt  build.sh  partitions_ota.csv  platformio.ini  sdkconfig  sdkconfig.esp32dev
ESP_Gateway/components/app/: CMakeLists.txt
ESP_Gateway/components/app/include/app/: stm_fw_image_raw.h  stm_fw_image_raw_IO.h  stm_fw_version.h  tasks.h
ESP_Gateway/components/app/src/: stm_fw_version.cpp  tasks.cpp
ESP_Gateway/components/core/: CMakeLists.txt
ESP_Gateway/components/core/src/: core_logic.cpp  retry_policy.cpp  signing_utils.cpp
ESP_Gateway/components/io/: CMakeLists.txt
ESP_Gateway/components/io/include/io/: config.h  crypto_helpers.h  http_client.h  led_service.h  ota_client.h  ota_mgr.h  sensors.h  stm32_fw_transfer.h  stm32_reset.h  stm32_uart.h  stm_fw_image_raw.h  stm_fw_manifest.h  stm_fw_policy.h  stm_fw_provider.h  stm_fw_signature.h  stm_fw_storage.h  stm_fw_trust.h  stm_ota_types.h  time_sync.h  wifi_mgr.h
ESP_Gateway/components/io/src/: crypto_helpers.cpp  http_client.cpp  led_service.cpp  ota_client.cpp  ota_mgr.cpp  sensors.cpp  stm32_fw_transfer.cpp  stm32_reset.cpp  stm32_uart.cpp  stm_fw_manifest.cpp  stm_fw_policy.cpp  stm_fw_provider.cpp  stm_fw_signature.cpp  stm_fw_storage.cpp  stm_fw_trust.cpp  time_sync.cpp  wifi_mgr.cpp
ESP_Gateway/components/io/test/: CMakeLists.txt  test_crypto_helpers.cpp  test_signing_utils.cpp
ESP_Gateway/components/stm_fw_storage/: CMakeLists.txt
ESP_Gateway/components/stm_fw_storage/include/: stm_fw_storage.h
ESP_Gateway/components/stm_fw_storage/src/: stm_fw_storage.cpp
ESP_Gateway/main/: CMakeLists.txt  main.cpp
ESP_Gateway/test/test_native/: test_core_logic.cpp  test_hooks.cpp  test_main.cpp  test_retry_policy.cpp  test_signing_utils.cpp  test_sources.cpp
stm32_client/: .mxproject  CMakeLists.txt  build.sh  stm32_client2.ioc
stm32_client/Core/Inc/: protocol.h  stm_ota.h  uart_comm.h
stm32_client/Core/Src/: app.c  main.c  protocol.c  stm32f4xx_hal_msp.c  stm_ota.c  uart_comm.c
stm32_client/docs/: protocol_v1.md
(+4 files in other folders)
